...
    <string name="search_unavailable_message">the document could not be searched</string>
    <string name="photo_index">Photo %1$d</string>
    <string name="fullscreen_photo">Full screen photo</string>
    <string name="photo_gallery_title">Photos (%1$d)</string>
    <string name="photo_gallery_empty">No photos yet. Tap Add Photo to take one.</string>
    <string name="fullscreen_gesture_help">Drag to move - Pinch to resize/rotate</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_shape">Add Shape</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_shape">Delete Shape</string>
    <string name="reset_zoom">Reset Zoom</string>
    <string name="search_results_ok">OK</string>
...
    <string name="annotation_delete_confirm">Delete</string>
    <string name="annotation_select_item">Select item:</string>
    <string name="fullscreen_note_placement">Tap on image to place note</string>
    <string name="fullscreen_shape_placement">Tap on image to place %1$s</string>
    <string name="fullscreen_note_label">Note</string>
    <string name="fullscreen_shape_label">Shape</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="shape_rectangle">Rectangle</string>
    <string name="shape_circle">Circle</string>
    <string name="shape_arrow">Arrow</string>
    <string name="shape_cloud">Cloud</string>
    <string name="annotation_measure">Measure</string>
...
    <string name="annotation_drawing">Drawing</string>
    <string name="annotation_photo">Photo</string>
    <string name="edit_action">Edit</string>
    <string name="add_photo">Add</string>
    <string name="view_photos">View</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="copy">Copy</string>
    <string name="options">Options</string>
    <string name="home">Home</string>
    <string name="view_pages">View Pages</string>
    <string name="search_current_page_menu">Search current page</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
...
